Added contributing, code of conduct, security, and license files
- Add CONTRIBUTING.md with development, PR, testing, and commit guidelines
- Add CODE_OF_CONDUCT.md (Contributor Covenant v2.0) and COMMUNITY Impact guidelines
- Add SECURITY.md describing vulnerability reporting, scope, and best practices
- Add LICENSE (MIT)
- Update README.md: add CI/release/version badges, clarify versioning/release process, link CONTRIBUTING, add support and acknowledgments, update repo references
- Update package.json metadata: set author, repository, bugs, and homepage fields

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autoopen-steam",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "description": "Chromium extension to open Steam Workshop items in the Steam desktop app",
   "private": true,
   "scripts": {
@@ -23,8 +23,16 @@
     "chrome-extension",
     "browser-extension"
   ],
-  "author": "",
+  "author": "SensitiveWebUser",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SensitiveWebUser/AutoOpen-Steam.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SensitiveWebUser/AutoOpen-Steam/issues"
+  },
+  "homepage": "https://github.com/SensitiveWebUser/AutoOpen-Steam#readme",
   "devDependencies": {
     "@types/chrome": "^0.1.27",
     "@types/node": "^24.9.2",
